--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
-  "name": "AboutPageTS",
+  "name": "about-page-with-typescript",
   "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
     "test": "jest"
+  },
+  "rnpm": {
+    "assets": [
+      "shareable/terms_&_conditions.md",
+      "shareable/privacy_policy.md"
+    ]
   },
   "dependencies": {
     "react": "16.8.3",
