--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.1"
+    "react-native": "0.59.1",
+    "react-native-fs": "^2.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.3.4",
